Closed
Bug 241507
Opened 21 years ago
Closed 21 years ago
Don't create new rendering contexts for each caret drawn on unix platforms
Categories
(Core :: DOM: Selection, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.8alpha1
People
(Reporter: caillon, Assigned: caillon)
References
Details
(Keywords: perf)
Attachments
(1 file)
|
851 bytes,
patch
|
jst
:
review+
bryner
:
superreview+
|
Details | Diff | Splinter Review |
See bug 28068, bug 51747, and
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/base/src/nsCaret.cpp&rev.1.123&mark=68-72#68
I can't seem to find any reference of issues with unix platforms, though, and
I've been running on linux with the define turned off for a while without issue,
and have even ran for a short while in caret browsing mode and haven't noticed
any problems with caret drawing.
So, I propose we turn off this define for XP_UNIX && !XP_MACOSX platforms, and
get some feedback in the 1.8alpha cycle.
| Assignee | ||
Comment 1•21 years ago
|
||
| Assignee | ||
Comment 3•21 years ago
|
||
Comment on attachment 146878 [details] [diff] [review]
Proposed patch
smfr, not sure if you are doing reviews still, but here's hoping you are.
Attachment #146878 -
Flags: superreview?(bryner)
Attachment #146878 -
Flags: review?(sfraser)
| Assignee | ||
Comment 4•21 years ago
|
||
Oh there you are!
No, not exactly. I intentionally didn't post this under that bug, because that
is supposedly the bug to fix whatever issues the other platforms have with this.
I just want this for linux only instead of globally.
Comment 5•21 years ago
|
||
Comment on attachment 146878 [details] [diff] [review]
Proposed patch
Sure, let's find out what breaks.
Attachment #146878 -
Flags: superreview?(bryner) → superreview+
| Assignee | ||
Comment 6•21 years ago
|
||
Simon, what say you? I'd like to get this in for testing...
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.8alpha
| Assignee | ||
Updated•21 years ago
|
Attachment #146878 -
Flags: review?(sfraser) → review?(jst)
Updated•21 years ago
|
Attachment #146878 -
Flags: review?(jst) → review+
| Assignee | ||
Comment 7•21 years ago
|
||
I just landed this. Be on the lookout for potential fallout. ;-)
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 9•21 years ago
|
||
No. I have no intention whatsoever of landing this on any branches.
Comment 10•21 years ago
|
||
Christopher, your patch for these seems to have caused several bugs on linux
when using GTK 1 - they all seem to be related areas, and I have just tried
backing out your changes on a fairly recent (1-2 days) cvs build and the
problems are resolved.
Bug 259302 - focussing, removing tabbox crashes mozilla on linux
Bug 265148 - Crash after clearing a mailnews folder search.
Bug 254049 - While adding an email address via addressbook to an email mozilla
crashes
254049 is the main tracking one, the others have been marked as dups.
You need to log in
before you can comment on or make changes to this bug.
Description
•