Bug 241507 Don't create new rendering contexts for each caret drawn on *nix platforms since there are no known issues with doing so.  If issues crop up, I will undo this change. r/sr=jst/bryner